====================================
New:
removeCompletedAndDeletedAction.Action.text=Remove Completed Links and De&leted Files
removeCompletedAndDeletedAction.Action.accelerator =shortcut L
removeCompletedAndDeletedAction.Action.shortDescription = Remove all completed downloads whose files do not exist
removeCompletedAndDeletedAction.Action.smallIcon=${iconsPath}clean.png

SKIPPED=SKIPPED

refreshProxyList.text=Refresh proxy list

UserPreferencesDialog.properties
====================================
New:
panelSpeedLimiter.border=Speed limiter
labelSpeedSliderMinValue.text=Global speed limiter minimum value
labelSpeedSliderMaxValue.text=maximum value
labelSpeedSliderStep.text=step
labelSpeedSliderKbps.text=kB/s
labelFileSpeedLimiterValues.text=Values for file speed limiter
fieldFileSpeedLimiterValues.toolTipText=Separate values with commas. Two commas indicate a menu separator. 0 means unlimited.

checkSlimLinesInHistory.text=Slim lines in History dialog

priorityUpAction.Action.text=
priorityUpAction.Action.shortDescription=Set higher plugin priority
priorityUpAction.Action.smallIcon=${iconsPath}priority_up.gif
priorityDownAction.Action.text=
priorityDownAction.Action.shortDescription=Set lower plugin priority
priorityDownAction.Action.smallIcon=${iconsPath}priority_down.gif

checkboxPluginIsActive.text=Plugin is active
checkboxUpdatePlugins.text=Make updates of this plugin
checkboxClipboardMonitoring.text=Enable plugin for Clipboard monitoring
labelAuthor.text=Author:
labelVersion.text=Version:
labelServices.text=Services:
labelPriority.text=Priority:
labelMaxConnections.text=Max connections:


Changed:
-----------
was:
pluginTableColumns_list=X|U|Plugin ID|Version|Service|Author|WWW
new:
pluginTableColumns_list=X|U|C|Plugin ID|Version|Service|Author|Max Downloads|Priority|WWW


DownloadNewPluginsTask.properties
====================================
New: