@@ -14,7 +14,10 @@ removeCompletedAndDeletedAction.Action.smallIcon=${iconsPath}clean.png
 
 SKIPPED=SKIPPED
 
-refreshProxyList.text=Refresh proxy list
+refreshProxyList.Action.text=&Refresh proxy list
+refreshProxyList.Action.shortDescription=Refresh the list of proxies
+refreshProxyList.Action.smallIcon=${iconsPath}refresh_proxy_list.png
+refreshProxyList.Action.accelerator=
 
 UserPreferencesDialog.properties
 ====================================
